# Agents

./: pyproject.toml  requirements.txt
projects/01_WEATHER_AGENT/: README.md  app.ipynb
projects/02_SRE_INCIDENT_ROUTER_AGENT/: README.md  app.ipynb  test_prompts.md
projects/03_RAG_HYBRID_SEARCH/: README.md  app.ipynb
projects/03_RAG_HYBRID_SEARCH/data/: return_policy.md  shipping_and_support.md  warranty_rules.md
