[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langsmith>=0.10.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
